--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^4.0.0",
+    "fs": "0.0.1-security",
+    "jquery": "^3.2.1",
     "node-twitterbot": "^0.2.2",
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.4",
     "twit": "^2.2.9"
   }
 }
